finalizing the view of folder by user and label name